[tool.poetry]
name = "aiogram-media-cache"
version = "0.1.0"
description = "A library for caching and managing media file IDs in Telegram bots built with aiogram."
authors = ["Denis tsucintosh@gmail.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NonDoctor/aiogram-media-cache"
keywords = ["telegram", "aiogram", "media", "cache", "file_id"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
